금액 약식표기 적용
